updated swaggo documentation
